issue23515_examples/Example5_Error.stderr
Example5.hs:7:22: error: [GHC-25897]
    • Couldn't match kind ‘t1’ with ‘GHC.Internal.Types.LiftedRep’
      Expected kind ‘*’, but ‘a’ has kind ‘TYPE t1’
      ‘t1’ is a rigid type variable bound by
        a family instance declaration
        at Example5.hs:7:3-22
    • In the first argument of ‘Maybe’, namely ‘a’
      In the type family declaration for ‘F’
  |
7 |   F (a -> _) = Maybe a
  |                      ^

